--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
     grid-template-rows: repeat(6, 1fr);
 }
 .box-index {
-    height: 15vh;
+    height: 17vh;
     display: flex;
     margin-bottom: 20px;
     background-color: hsl(15, 100%, 70%);
@@ -73,6 +73,8 @@ body {
     width: 100%;;
     background-color: hsl(235, 46%, 20%);
     border-radius: 20px;
+    display: grid;
+    grid-template-rows: 40% 60%;
 }
 #play {
     background-color: hsl(195, 74%, 62%);
@@ -93,4 +95,87 @@ body {
 #self-care {
     background-color: hsl(43, 84%, 65%);
     background-image: url('images/icon-self-care.svg');
+}
+
+.title {
+    display: grid;
+    grid-template-columns: 80% 20%;
+    margin: 5%;
+    font-size: 15px;
+}
+.more {
+    background-image: url('images/icon-ellipsis.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+    background-color: hsl(235, 46%, 20%);
+    border: none;
+}
+.time-data {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin: 5%;
+}
+.previous {
+    color: hsl(236, 100%, 87%);
+    font-size: 15px;
+    justify-self: end;
+}
+.current {
+    font-size: 30px;
+    justify-self: start;
+    font-weight: 300;
+}
+.box-index:hover .infor {
+    background-color: hsl(235, 47%, 40%);
+    transition: all 0.3s ease;
+}
+.box-index:hover .infor button {
+    background-color:hsl(235, 47%, 40%);
+    transition: all 0.3s ease;
+}
+@media (min-width: 768px) {
+    .main {
+        display: grid;
+        margin-bottom: 0;
+        grid-template-columns: 20% 80%;
+    }
+    .header {
+        height: 60vh;
+        margin-bottom: 0;
+    }
+    .head {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+    .head img {
+        margin-bottom: 20px;
+        margin-left: 5%;
+        height: 70px;
+    }
+    .name {
+        margin-top: 10%;
+        font-size: 20px;
+    }
+    .time {
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 10%;
+    }
+    .content {
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        margin-left: 20px;
+    }
+    .box-index {
+        height: 100%;
+    }
+    .time-data {
+        grid-template-columns: 1fr;
+        grid-template-rows: 50% 50%;
+        margin: 0 auto;
+        margin-left: 20px;
+    }
 }
